tests/negative/Internal/PatternConstructor.juvix
module PatternConstructor;
  inductive A {
    a : A;
  };

inductive B {
    b : B;
  };

  f : A → B;
  f b := b;

end;
